Details    : 2.6.22 has only one visble change, SLAB_CTOR_* constants is
	     removed. In this case we need drop using os depended interface to
	     kmem_cache and use cfs_mem_cache API.

Severity   : minor
Bugzilla   : 12747
Frequency  : always
Description: fix mal-formatted messages
Details    : fix some mal-formatted DEBUG_REQ and LCONSOLE_ERROR_MSG messages 


Severity   : minor
Bugzilla   : 11737
Frequency  : always in liblustre
Description: wrong IS_ERR implementation in liblustre.h
Details    : fix IS_ERR implementation in liblustre.h for right detect errors.

--------------------------------------------------------------------------------

2007-05-03  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0.1
       * bug fixes

Severity   : normal
Frequency  : on some architectures
Bugzilla   : 12404
Description: 1.6 client sometimes fails to mount from a 1.4 MDT
Details    : Uninitialized flags sometimes cause configuration commands to
	     be skipped.

Severity   : normal
Frequency  : patchless clients only
Bugzilla   : 12391
Description: missing __iget() symbol export
Details    : The __iget() symbol export is missing.  To avoid the need for
	     this on patchless clients the deathrow inode reaper is turned
	     off, and we depend on the VM to clean up old inodes.  This
	     dependency was during via the fix for bug 12181.

--------------------------------------------------------------------------------

2007-04-19  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0
       * CONFIGURATION CHANGE.  This version of Lustre WILL NOT
	 INTEROPERATE with older versions automatically.  In many cases a
	 special upgrade step is needed. Please read the
	 user documentation before upgrading any part of a 1.4.x system.
       * WARNING: Lustre configuration and startup changes are required with
	 this release.  See https://mail.clusterfs.com/wikis/lustre/MountConf
	 for details.
       * Support for kernels: