@@ -357,12 +357,18 @@ Frequency  : always
 Description: fix mal-formatted messages
 Details    : fix some mal-formatted DEBUG_REQ and LCONSOLE_ERROR_MSG messages 
 
-
 Severity   : minor
 Bugzilla   : 11737
 Frequency  : always in liblustre
 Description: wrong IS_ERR implementation in liblustre.h
 Details    : fix IS_ERR implementation in liblustre.h for right detect errors.
+
+Severity   : minor
+Bugzilla   : 10419
+Frequency  : always
+Description: Correct condition for output debug message.
+Details    : inode i_nlink equal zero is not enough for output message about disk
+	     corruption, i_ctime and i_mode should be also checked.
 
 --------------------------------------------------------------------------------
 
